Fixed bug on mobile devices

--- a/bpm_test/bpm_test.css
+++ b/bpm_test/bpm_test.css
@@ -58,7 +58,7 @@ button.active, button:active {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 5px;
-    max-width: 280px;
+    max-width: 300px;
     margin-left: auto;
     margin-right: auto;
 }
